[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opeb-roll-forward"
version = "2.0.0"
description = "Production GASB 75 OPEB Roll-Forward Model - Experience analysis and projections"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Actuarial Pipeline Project"}]
keywords = ["GASB 75", "OPEB", "roll-forward", "experience analysis"]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24.0"]

[tool.setuptools.packages.find]
where = ["src"]
